[gd_scene load_steps=6 format=3 uid="uid://csresjl4ikdxf"]

[ext_resource type="Script" uid="uid://dylwipnntpk52" path="res://ui/play/scene_play.gd" id="1_pq2io"]
[ext_resource type="Texture2D" uid="uid://d108p84d5nra6" path="res://ui/play/frame.png" id="3_trsgt"]
[ext_resource type="Texture2D" uid="uid://wto810c0siw2" path="res://ui/play/frame_light.png" id="4_dscmi"]
[ext_resource type="PackedScene" uid="uid://y5gn0yborfms" path="res://ui/play/hud_player_state.tscn" id="4_trsgt"]
[ext_resource type="PackedScene" uid="uid://cukessl3tlctk" path="res://ui/play/ui_fail.tscn" id="7_6apec"]

[node name="ScenePlay" type="Control"]
y_sort_enabled = true
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_pq2io")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="NodePlayers" type="Node2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true

[node name="Level" type="Node2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true

[node name="NodeAmmo" type="Node2D" parent="."]

[node name="NodeEffect" type="Node2D" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.0392157, 0.0392157, 0.0392157, 1)

[node name="NodeForScare" type="CanvasLayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UiFail" parent="CanvasLayer" instance=ExtResource("7_6apec")]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(18.892157, 0, 0, 0.1254902)

[node name="Frame" type="Sprite2D" parent="CanvasLayer/ColorRect"]
scale = Vector2(0.6666667, 0.5625)
texture = ExtResource("3_trsgt")
centered = false

[node name="FrameLight" type="Sprite2D" parent="CanvasLayer/ColorRect"]
unique_name_in_owner = true
visible = false
position = Vector2(960, 890.00006)
scale = Vector2(0.831, 0.831)
texture = ExtResource("4_dscmi")

[node name="TimerGenerateEnemy" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="HudPlayerState" parent="." instance=ExtResource("4_trsgt")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 1134.0
offset_top = 562.0
offset_right = 1134.0
offset_bottom = 562.0

[connection signal="timeout" from="TimerGenerateEnemy" to="." method="_on_timer_generate_enemy_timeout"]
